modifier dockerfile to override url for azure

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,13 @@
   "TomorrowIoApiKey": "YourKeyHere",
   "WeatherstackApiKey": "YourKeyHere",
   "OpenWeatherMapApiKey": "YourKeyHere",
-  "VisualCrossingApiKey": "YourKeyHere"
+  "VisualCrossingApiKey": "YourKeyHere",
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:80"
+      }
+    }
+  }
 }
