--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,8 +14,8 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-       "environmentVariables": {
-       "ASPNETCORE_ENVIRONMENT": "Development"
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
@@ -25,12 +25,12 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8080",
-        "ASPNETCORE_HTTP_PORTS": "8081"
+        "ASPNETCORE_ENVIRONMENT": "Development",  
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
       },
       "publishAllPorts": true,
       "useSSL": true
     }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json"
+  }
 }
